--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body
 
 main
 {
+    display: grid;
     padding: 0 2.4rem;
     align-self: center;
 }
@@ -50,8 +51,8 @@ header
 .image-container
 {
     width: calc(100% - 2.8rem);
-    margin-bottom: 5rem;
-    padding: 0 1.4rem;
+    max-width: 36rem;
+    margin: 0 auto 5rem;
 }
 
 .image-container img
@@ -83,6 +84,7 @@ header
 .btn
 {
     padding: 1.2rem 8rem;
+    margin-bottom: 2rem;
     border-radius: 2rem;
     border: none;
     font-family: 'Poppins', sans-serif;
@@ -122,8 +124,8 @@ footer .icons
 footer .icons span
 {
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 3rem;
+    height: 3rem;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
