--- a/css/media.css
+++ b/css/media.css
@@ -8,7 +8,7 @@
 
     main
     {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr auto;
         padding: 0 6rem;
     }
 
