--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ footer .icons span
     width: 100%;
     position: absolute;
     bottom: 0.6rem;
-    font-size: 11px;
+    font-size: 1.2rem;
     text-align: center;
 }
 
